crates/dayseam-report/tests/snapshots/golden__dev_eod_confluence_two_spaces.snap
---
source: crates/dayseam-report/tests/golden.rs
expression: draft
---
id: aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa
date: 2026-04-18
template_id: dayseam.dev_eod
template_version: 2026-04-24
sections:
  - id: confluence_pages
    title: Confluence pages
    bullets:
      - id: b_ee63920f7ff2912b
        text: "**Engineering** (ENG) — Edited: Release runbook"
        source_kind: Confluence
      - id: b_fd8862cec14f7c43
        text: "**Operations** (OPS) — Edited: On-call rotation"
        source_kind: Confluence
evidence:
  - bullet_id: b_ee63920f7ff2912b
    event_ids:
      - efa61d64-29c0-5f71-a45a-d38aadb83522
    reason: 1 Confluence event
  - bullet_id: b_fd8862cec14f7c43
    event_ids:
      - 4490ab23-436c-5f14-9621-84fa10b51ec1
    reason: 1 Confluence event
per_source_state:
  15000000-0000-0000-0000-000000000000:
    status: Succeeded
    started_at: "2026-04-18T23:00:00Z"
    finished_at: "2026-04-18T23:00:00Z"
    fetched_count: 2
    error: ~
verbose_mode: false
generated_at: "2026-04-18T23:00:00Z"
