crates/dayseam-report/tests/snapshots/golden__dev_eod_empty_day.snap
---
source: crates/dayseam-report/tests/golden.rs
expression: draft
---
id: aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa
date: 2026-04-18
template_id: dayseam.dev_eod
template_version: 2026-04-24
sections:
  - id: commits
    title: Commits
    bullets:
      - id: b_9fbcadec91faffed
        text: "*No tracked activity for Saturday, Apr 18, 2026.*"
        source_kind: ~
evidence: []
per_source_state: {}
verbose_mode: false
generated_at: "2026-04-18T23:00:00Z"
