crates/dayseam-report/tests/snapshots/golden__dev_eod_private_repo.snap
---
source: crates/dayseam-report/tests/golden.rs
expression: draft
---
id: aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa
date: 2026-04-18
template_id: dayseam.dev_eod
template_version: 2026-04-24
sections:
  - id: commits
    title: Commits
    bullets:
      - id: b_33ff7401716b59e5
        text: (private work)
        source_kind: LocalGit
      - id: b_e546dcc2b1bb7a68
        text: (private work)
        source_kind: LocalGit
evidence:
  - bullet_id: b_33ff7401716b59e5
    event_ids:
      - dc363fdd-fe9e-522b-9562-338e715788cf
    reason: 1 commit
  - bullet_id: b_e546dcc2b1bb7a68
    event_ids:
      - 9ace5508-6ff5-53e3-b927-9cf7b907193f
    reason: 1 commit
per_source_state:
  03000000-0000-0000-0000-000000000000:
    status: Succeeded
    started_at: "2026-04-18T23:00:00Z"
    finished_at: "2026-04-18T23:00:00Z"
    fetched_count: 2
    error: ~
verbose_mode: false
generated_at: "2026-04-18T23:00:00Z"
