crates/dayseam-report/tests/snapshots/golden__dev_eod_single_repo.snap
---
source: crates/dayseam-report/tests/golden.rs
expression: draft
---
id: aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa
date: 2026-04-18
template_id: dayseam.dev_eod
template_version: 2026-04-20
sections:
  - id: commits
    title: Commits
    bullets:
      - id: b_cfac0767916976cb
        text: "**repo-a** — feat: add activity store"
      - id: b_bd82821bf1b6bb70
        text: "**repo-a** — refactor: extract rollup helper"
      - id: b_ccb666ad8a457df6
        text: "**repo-a** — test: cover empty day path"
evidence:
  - bullet_id: b_cfac0767916976cb
    event_ids:
      - 88200526-ad9f-50c8-a9e7-3ebd4a4dcb82
    reason: 1 commit
  - bullet_id: b_bd82821bf1b6bb70
    event_ids:
      - 179995f9-0e23-528b-b92a-ec3d5a51a8d7
    reason: 1 commit
  - bullet_id: b_ccb666ad8a457df6
    event_ids:
      - e2645c7d-9db5-5c9e-9cce-cce14db8353c
    reason: 1 commit
per_source_state:
  01000000-0000-0000-0000-000000000000:
    status: Succeeded
    started_at: "2026-04-18T23:00:00Z"
    finished_at: "2026-04-18T23:00:00Z"
    fetched_count: 3
    error: ~
verbose_mode: false
generated_at: "2026-04-18T23:00:00Z"
